# impactifier

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GUIDELINES.md  LICENSE  README.md  SPECIFICATION.md  impactifier-config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_proposal.md
.github/workflows/: impactifier.yml  rust.yml
example/: impactifier-config.yaml
example/.github/workflows/: impactifier-action.yaml
impactifier/: Cargo.toml
impactifier/src/: config.rs  main.rs
ruleng/: Cargo.toml  SPECIFICATION.md
ruleng/example/: main.rl
ruleng/src/: lexer.rs  token.rs
src/: cli.rs  config.rs  git.rs  main.rs  transform.rs
src/utils/: mod.rs
