[package]
name = "impactifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
git2 = "0.19.0"
serde = "1.0.208"
serde_derive = "1.0.208"
serde_yaml = "0.9.34"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
