[package]
name = "impactifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.16", features = ["derive"] }
config = "0.14.0"
git2 = "0.19.0"
lazy_static = "1.5.0"
rhai = "1.19.0"
serde = "1.0.208"
serde_derive = "1.0.208"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
thiserror = "1.0.64"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                
    "fast-rng",         
    "macro-diagnostics", 
]
